--- a/app.yaml
+++ b/app.yaml
@@ -12,14 +12,14 @@ automatic_scaling:
   max_idle_instances: 2
 
 handlers:
-#TODO: reconcile these
-- url: /
+- url: /styles
+  static_dir: styles
+
+- url: /js
+  static_dir: js
+
+- url: /images
+  static_dir: images
+
+- url: /.*
   script: main.app
-
-- url: /index.html
-  script: main.app
-
-- url: /(.*)
-  static_files: www/\1
-  upload: www/(.*)
-
